content and design changes for reservation air ticket

--- a/html/reservationairticket/index.html
+++ b/html/reservationairticket/index.html
@@ -31,9 +31,9 @@
 <body class="scrollbar scrollbar-rare-wind">
 <header>
     <nav class="navbar navbar-expand-lg navbar-orange-secondary secondary-color">
-        <div class="container">
+        <div class="container" id="navContainer">
             <a class="navbar-brand" href="#">
-                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
+                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid"
                      alt="Reservation Air Ticket">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -61,10 +61,11 @@
         <div class="container text-center custom-container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="header">Contact Us</h1>
+                    <h1 class="header">EXPECT NOTHING BUT THE BEST.</h1>
                 </div>
                 <div class="col-md-12">
-                    <p class="body">Travel Simply and Economically!</p>
+                    <p class="body black-text">To book a flight, make adjustments, or get a refund, call our customer
+                        service.</p>
                 </div>
                 <div class="col-md-12">
                     <a class="btn call-btn number-replace" href="tel:18663701007"> 1 (866) 370-1007</a>
@@ -74,6 +75,9 @@
     </div>
     <hr class="hr-light">
     <!--Note holds the trip payout widget-->
+    <div class="container text-center" id="dealAnimeContainer">
+        <h1 class="h1 font-weight-bold animated flash slow infinite">Special Offers on Flights!!</h1>
+    </div>
     <div class="container d-flex ">
         <iframe class="w-100 border-0 position-relative" id="travelIFrame"
                 src="//www.travelpayouts.com/widgets/444787d409cef89cd87f886bad23ab52.html?v=2178">
@@ -83,7 +87,8 @@
     <div class="container margin-minus-10p" id="aboutUsContainer">
         <h1 class="header">About Us</h1>
         <p class="body">
-            At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make changes
+            At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make
+            changes
             and cancellations at a discount. Our 24/7 flight reservation desk is here to assist you with all of your
             flight travel arrangements. Whether you choose to book a flight directly on our website or over the phone,
             TicketAirlineBooking.com will help you save money on your next flight reservation.
@@ -153,8 +158,7 @@
                             <a class="link-replace">REFUNDS & CHANGES</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">Apply for a refund for tickets, unused trip purchases, unused Trip
-                            Protection, or check refund status.</p>
+                        <p class="card-text">Apply for a refund for tickets, unused trip purchases, or check refund status.</p>
 
                     </div>
 
@@ -168,10 +172,11 @@
         <div class="container text-center custom-container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="header">24x7 Flight Reservations</h1>
+                    <h1 class="header">Reservations 24/7</h1>
                 </div>
                 <div class="col-md-12">
-                    <p class="body">Book a New Flight, Make a Change or Cancellation</p>
+                    <p class="body">Let us help you in your every journey. Make a New Reservation, Change Existing
+                        One</p>
                 </div>
                 <div class="col-md-12">
                     <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
@@ -184,17 +189,20 @@
     <div class="container">
         <p class="text-left"> © 2020 Reservation Air Ticket - <span class="address-fill"></span></p>
         <p class="text-left">
-            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service that has
+            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service
+            that has
             been published on its website. Note that any such description or information, which includes but is not
             limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover, TicketAirlineBooking.com
+            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover,
+            TicketAirlineBooking.com
             reserves the right to edit, modify or change any piece of information at any given time. In case a customer
             has made reservation from this website under the published price that is wrong, then customer will be given
             a chance to either continue the same reservation under the correct price or to cancel the reservation
             without any termination fee.
         </p>
         <p class="text-center pb-1">
-            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms and Conditions</a>
+            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms
+            and Conditions</a>
         </p>
     </div>
 </footer>
