--- a/html/reservationairticket/terms.html
+++ b/html/reservationairticket/terms.html
@@ -31,10 +31,9 @@
 <body class="scrollbar scrollbar-rare-wind">
 <header>
     <nav class="navbar navbar-expand-lg navbar-light secondary-color">
-        <div class="container">
+        <div class="container" id="navContainer">
             <a class="navbar-brand" href="#">
-                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
-                     alt="Reservation Air Ticket">
+                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" alt="Reservation Air Ticket">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,10 +59,10 @@
     <div class="container pt-3" id="termsContainer">
         <div>
             <h1>Terms and Conditions</h1>
-            <span>by Rono / November 9, 2020</span>
-            <p>Last updated: November 9, 2020
-            <p>Please read these Terms of Use (“Terms”, “Terms of Use”) carefully before using the
-            <p>https://reservationairticket.com website (the “Service”) operated by (“us”, “we”, or “our”).
+            <span>by Rono / November 10, 2021</span>
+            <p>Last updated: November 10, 2021</p>
+            <p>Please read these Terms of Use (“Terms”, “Terms of Use”) carefully before using the</p>
+            <p>https://reservationairticket.com website (the “Service”) operated by (“us”, “we”, or “our”).</p>
 
             <p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these
                 Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
@@ -76,7 +75,8 @@
                 property of and its licensors.</p>
 
             <h1>Links To Other Web Sites</h1>
-            <p>Our Service may contain links to third-party web sites or services that are not owned or controlled by.</p>
+            <p>Our Service may contain links to third-party web sites or services that are not owned or controlled
+                by.</p>
 
             <p>has no control over, and assumes no responsibility for, the content, privacy policies, or practices of
                 any third party web sites or services. You further acknowledge and agree that shall not be responsible
@@ -130,17 +130,20 @@
     <div class="container">
         <p class="text-left"> © 2020 Reservation Air Ticket - <span class="address-fill"></span></p>
         <p class="text-left">
-            ReservationAirTicket.com does not guarantee the accuracy of any content, information, product, or service that has
+            ReservationAirTicket.com does not guarantee the accuracy of any content, information, product, or service
+            that has
             been published on its website. Note that any such description or information, which includes but is not
             limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which ReservationAirTicket.com will not be held liable. Moreover, ReservationAirTicket.com
+            inaccuracies and errors for which ReservationAirTicket.com will not be held liable. Moreover,
+            ReservationAirTicket.com
             reserves the right to edit, modify or change any piece of information at any given time. In case a customer
             has made reservation from this website under the published price that is wrong, then customer will be given
             a chance to either continue the same reservation under the correct price or to cancel the reservation
             without any termination fee.
         </p>
         <p class="text-center pb-1">
-            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms and Conditions</a>
+            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms
+            and Conditions</a>
         </p>
     </div>
 </footer>
