--- a/html/reservationairticket/about-us.html
+++ b/html/reservationairticket/about-us.html
@@ -31,10 +31,9 @@
 <body class="scrollbar scrollbar-rare-wind">
 <header>
     <nav class="navbar navbar-expand-lg navbar-orange-secondary secondary-color">
-        <div class="container">
+        <div class="container" id="navContainer">
             <a class="navbar-brand" href="#">
-                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
-                     alt="Reservation Air Ticket">
+                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" alt="Reservation Air Ticket">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +69,8 @@
     <div class="container" id="aboutUsContainer">
         <h1 class="header">About Us</h1>
         <p class="body">
-            At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make changes
+            At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make
+            changes
             and cancellations at a discount. Our 24/7 flight reservation desk is here to assist you with all of your
             flight travel arrangements. Whether you choose to book a flight directly on our website or over the phone,
             TicketAirlineBooking.com will help you save money on your next flight reservation.
@@ -142,8 +142,7 @@
                             <a class="link-replace">REFUNDS & CHANGES</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">Apply for a refund for tickets, unused trip purchases, unused Trip
-                            Protection, or check refund status.</p>
+                        <p class="card-text">Apply for a refund for tickets, unused trip purchases, or check refund status.</p>
 
                     </div>
 
@@ -173,17 +172,20 @@
     <div class="container">
         <p class="text-left"> © 2020 Reservation Air Ticket - <span class="address-fill"></span></p>
         <p class="text-left">
-            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service that has
+            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service
+            that has
             been published on its website. Note that any such description or information, which includes but is not
             limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover, TicketAirlineBooking.com
+            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover,
+            TicketAirlineBooking.com
             reserves the right to edit, modify or change any piece of information at any given time. In case a customer
             has made reservation from this website under the published price that is wrong, then customer will be given
             a chance to either continue the same reservation under the correct price or to cancel the reservation
             without any termination fee.
         </p>
         <p class="text-center pb-1">
-            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms and Conditions</a>
+            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms
+            and Conditions</a>
         </p>
     </div>
 </footer>
