--- a/html/reservationairticket/contact-us.html
+++ b/html/reservationairticket/contact-us.html
@@ -31,10 +31,9 @@
 <body class="scrollbar scrollbar-rare-wind">
 <header>
     <nav class="navbar navbar-expand-lg navbar-orange-secondary secondary-color">
-        <div class="container">
+        <div class="container" id="navContainer">
             <a class="navbar-brand" href="#">
-                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
-                     alt="Reservation Air Ticket">
+                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" alt="Reservation Air Ticket">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,8 +47,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about-us.html">About Us</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="contact-us.html">Contact Us<span class="sr-only">(current)</span></a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="contact-us.html">Contact Us<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -140,8 +139,7 @@
                             <a class="link-replace">REFUNDS & CHANGES</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">Apply for a refund for tickets, unused trip purchases, unused Trip
-                            Protection, or check refund status.</p>
+                        <p class="card-text">Apply for a refund for tickets, unused trip purchases, or check refund status.</p>
 
                     </div>
 
@@ -171,17 +169,20 @@
     <div class="container">
         <p class="text-left"> © 2020 Reservation Air Ticket - <span class="address-fill"></span></p>
         <p class="text-left">
-            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service that has
+            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service
+            that has
             been published on its website. Note that any such description or information, which includes but is not
             limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover, TicketAirlineBooking.com
+            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover,
+            TicketAirlineBooking.com
             reserves the right to edit, modify or change any piece of information at any given time. In case a customer
             has made reservation from this website under the published price that is wrong, then customer will be given
             a chance to either continue the same reservation under the correct price or to cancel the reservation
             without any termination fee.
         </p>
         <p class="text-center pb-1">
-            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms and Conditions</a>
+            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms
+            and Conditions</a>
         </p>
     </div>
 </footer>
