reservation air ticket changes

--- a/html/reservationairticket/about-us.html
+++ b/html/reservationairticket/about-us.html
@@ -156,10 +156,11 @@
         <div class="container text-center custom-container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="header">24x7 Flight Reservations</h1>
+                    <h1 class="header">Reservations 24/7</h1>
                 </div>
                 <div class="col-md-12">
-                    <p class="body">Book a New Flight, Make a Change or Cancellation</p>
+                    <p class="body">Let us help you in your every journey. Make a New Reservation, Change Existing
+                        One</p>
                 </div>
                 <div class="col-md-12">
                     <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
@@ -170,22 +171,23 @@
 </main>
 <footer id="footer" class="page-footer unique-color pt-2">
     <div class="container">
-        <p class="text-left"> © 2020 Reservation Air Ticket - <span class="address-fill"></span></p>
-        <p class="text-left">
-            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service
-            that has
-            been published on its website. Note that any such description or information, which includes but is not
-            limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover,
-            TicketAirlineBooking.com
-            reserves the right to edit, modify or change any piece of information at any given time. In case a customer
-            has made reservation from this website under the published price that is wrong, then customer will be given
-            a chance to either continue the same reservation under the correct price or to cancel the reservation
-            without any termination fee.
+        <p class="text-left"> © 2021 Reservation Air Ticket - <span class="address-fill"></span></p>
+        <p class="font-weight-bold m-0">Disclaimer</p>
+        <p class="text-left m-0">
+            ReservationAirTicket.com does not guarantee the accuracy of any content, information, product, or service
+            that has been published on its website.<b>Note </b> that any such description or information, which includes
+            but is not limited to price, infographics, graphics, photo, product or service description, etc., can
+            consist of inaccuracies and errors for which ReservationAirTicket.com will not be held liable.</p>
+        <p class="m-0">
+            Moreover, ReservationAirTicket.com reserves the right to edit, modify or change any piece of information at
+            its sole discretion. In case a customer has made a reservation from this website under the published price
+            that is wrong, then customer will be given a chance to either continue the same reservation under the
+            correct price or to cancel the reservation without any penalty fees.
         </p>
-        <p class="text-center pb-1">
-            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms
-            and Conditions</a>
+        <p class="text-center py-1">
+            <a href="privacy.html" class="footer-links">Privacy Policy</a>
+            <span>-</span>
+            <a href="terms.html" class="footer-links">Terms and Conditions</a>
         </p>
     </div>
 </footer>
