--- a/html/reservationairticket/terms.html
+++ b/html/reservationairticket/terms.html
@@ -128,22 +128,23 @@
 </main>
 <footer id="footer" class="page-footer unique-color pt-2">
     <div class="container">
-        <p class="text-left"> © 2020 Reservation Air Ticket - <span class="address-fill"></span></p>
-        <p class="text-left">
+        <p class="text-left"> © 2021 Reservation Air Ticket - <span class="address-fill"></span></p>
+        <p class="font-weight-bold m-0">Disclaimer</p>
+        <p class="text-left m-0">
             ReservationAirTicket.com does not guarantee the accuracy of any content, information, product, or service
-            that has
-            been published on its website. Note that any such description or information, which includes but is not
-            limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which ReservationAirTicket.com will not be held liable. Moreover,
-            ReservationAirTicket.com
-            reserves the right to edit, modify or change any piece of information at any given time. In case a customer
-            has made reservation from this website under the published price that is wrong, then customer will be given
-            a chance to either continue the same reservation under the correct price or to cancel the reservation
-            without any termination fee.
+            that has been published on its website.<b>Note </b> that any such description or information, which includes
+            but is not limited to price, infographics, graphics, photo, product or service description, etc., can
+            consist of inaccuracies and errors for which ReservationAirTicket.com will not be held liable.</p>
+        <p class="m-0">
+            Moreover, ReservationAirTicket.com reserves the right to edit, modify or change any piece of information at
+            its sole discretion. In case a customer has made a reservation from this website under the published price
+            that is wrong, then customer will be given a chance to either continue the same reservation under the
+            correct price or to cancel the reservation without any penalty fees.
         </p>
-        <p class="text-center pb-1">
-            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms
-            and Conditions</a>
+        <p class="text-center py-1">
+            <a href="privacy.html" class="footer-links">Privacy Policy</a>
+            <span>-</span>
+            <a href="terms.html" class="footer-links">Terms and Conditions</a>
         </p>
     </div>
 </footer>
