--- a/html/reservationairticket/index.html
+++ b/html/reservationairticket/index.html
@@ -87,11 +87,10 @@
     <div class="container margin-minus-10p" id="aboutUsContainer">
         <h1 class="header">About Us</h1>
         <p class="body">
-            At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make
-            changes
-            and cancellations at a discount. Our 24/7 flight reservation desk is here to assist you with all of your
-            flight travel arrangements. Whether you choose to book a flight directly on our website or over the phone,
-            TicketAirlineBooking.com will help you save money on your next flight reservation.
+            At ReservationAirTicket.com our goal is to assist travelers reserve flights, modify existing reservations
+            at a discount. We go to great lengths to ensure you get the best <b>Reservation Ticket</b> that
+            saves money for your next airline ticket whether you buy directly through our website or
+            over the phone. It is always best to purchase your travel tickets as soon as possible(asap).
         </p>
         <div class="row text-center">
             <div class="col-md-4">
@@ -158,7 +157,8 @@
                             <a class="link-replace">REFUNDS & CHANGES</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">Apply for a refund for tickets, unused trip purchases, or check refund status.</p>
+                        <p class="card-text">Apply for a refund for tickets, unused trip purchases, or check refund
+                            status.</p>
 
                     </div>
 
@@ -187,22 +187,23 @@
 </main>
 <footer id="footer" class="page-footer unique-color pt-2">
     <div class="container">
-        <p class="text-left"> © 2020 Reservation Air Ticket - <span class="address-fill"></span></p>
-        <p class="text-left">
-            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service
-            that has
-            been published on its website. Note that any such description or information, which includes but is not
-            limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover,
-            TicketAirlineBooking.com
-            reserves the right to edit, modify or change any piece of information at any given time. In case a customer
-            has made reservation from this website under the published price that is wrong, then customer will be given
-            a chance to either continue the same reservation under the correct price or to cancel the reservation
-            without any termination fee.
+        <p class="text-left"> © 2021 Reservation Air Ticket - <span class="address-fill"></span></p>
+        <p class="font-weight-bold m-0">Disclaimer</p>
+        <p class="text-left m-0">
+            ReservationAirTicket.com does not guarantee the accuracy of any content, information, product, or service
+            that has been published on its website.<b>Note </b> that any such description or information, which includes
+            but is not limited to price, infographics, graphics, photo, product or service description, etc., can
+            consist of inaccuracies and errors for which ReservationAirTicket.com will not be held liable.</p>
+        <p class="m-0">
+            Moreover, ReservationAirTicket.com reserves the right to edit, modify or change any piece of information at
+            its sole discretion. In case a customer has made a reservation from this website under the published price
+            that is wrong, then customer will be given a chance to either continue the same reservation under the
+            correct price or to cancel the reservation without any penalty fees.
         </p>
-        <p class="text-center pb-1">
-            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms
-            and Conditions</a>
+        <p class="text-center py-1">
+            <a href="privacy.html" class="footer-links">Privacy Policy</a>
+            <span>-</span>
+            <a href="terms.html" class="footer-links">Terms and Conditions</a>
         </p>
     </div>
 </footer>
