--- a/html/ticketairlinebooking/index.html
+++ b/html/ticketairlinebooking/index.html
@@ -32,10 +32,9 @@
 <body class="scrollbar scrollbar-deep-blue">
 <header>
     <nav class="navbar navbar-expand-lg navbar-light secondary-color">
-        <div class="container">
+        <div class="container" id="navContainer">
             <a class="navbar-brand" href="#">
-                <img src="img/ticketairlinebooking/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
-                     alt="Ticket Airline Booking">
+                <img src="img/ticketairlinebooking/logo.png" class="img-fluid" alt="Ticket Airline Booking">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +64,7 @@
                     <h1 class="header">Contact Us</h1>
                 </div>
                 <div class="col-md-12">
-                    <p class="body">Travel Simply and Economically!</p>
+                    <p class="body text-capitalize">Just get on a plane and fly away!</p>
                 </div>
                 <div class="col-md-12">
                     <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
@@ -83,7 +82,8 @@
     <div class="container margin-minus-10p" id="aboutUsContainer">
         <h1 class="header">About Us</h1>
         <p class="body">
-            At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make changes
+            At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make
+            changes
             and cancellations at a discount. Our 24/7 flight reservation desk is here to assist you with all of your
             flight travel arrangements. Whether you choose to book a flight directly on our website or over the phone,
             TicketAirlineBooking.com will help you save money on your next flight reservation.
@@ -102,7 +102,7 @@
 
                         <!-- Title -->
                         <h4 class="card-title">
-                            <a class="link-replace">BOOK A FLIGHT</a>
+                            <a class="link-replace text-uppercase">Easy-Booking</a>
                         </h4>
                         <!-- Text -->
                         <p class="card-text">Search for a flight round-trip, multi-city or more. Find a flight that fits
@@ -126,7 +126,7 @@
 
                         <!-- Title -->
                         <h4 class="card-title">
-                            <a class="link-replace">FLIGHT CANCELLATIONS</a>
+                            <a class="link-replace text-uppercase">Best Prices</a>
                         </h4>
                         <!-- Text -->
                         <p class="card-text">Change or cancel a flight, rebook a delayed or cancelled flight, make
@@ -150,7 +150,7 @@
 
                         <!-- Title -->
                         <h4 class="card-title">
-                            <a class="link-replace">REFUNDS & CHANGES</a>
+                            <a class="link-replace text-uppercase">Quick Services</a>
                         </h4>
                         <!-- Text -->
                         <p class="card-text">Apply for a refund for tickets, unused trip purchases, unused Trip
@@ -168,10 +168,10 @@
         <div class="container text-center custom-container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="header">24x7 Flight Reservations</h1>
+                    <h1 class="header">24x7 Support</h1>
                 </div>
                 <div class="col-md-12">
-                    <p class="body">Book a New Flight, Make a Change or Cancellation</p>
+                    <p class="body">Make reservation from anywhere in the world. Call us 24/7 for advanced reservation.</p>
                 </div>
                 <div class="col-md-12">
                     <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
@@ -184,10 +184,12 @@
     <div class="container text-center">
         <p> © 2020 Ticket Airline Booking - <span class="address-fill"></span></p>
         <p>
-            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service that has
+            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service
+            that has
             been published on its website. Note that any such description or information, which includes but is not
             limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover, TicketAirlineBooking.com
+            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover,
+            TicketAirlineBooking.com
             reserves the right to edit, modify or change any piece of information at any given time. In case a customer
             has made reservation from this website under the published price that is wrong, then customer will be given
             a chance to either continue the same reservation under the correct price or to cancel the reservation
