ticket airline booking related changes

--- a/html/ticketairlinebooking/about-us.html
+++ b/html/ticketairlinebooking/about-us.html
@@ -72,13 +72,10 @@
         <h1 class="header">About Us</h1>
         <p class="body">
             At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make
-            changes
-            and cancellations at a discount. Our 24/7 flight reservation desk is here to assist you with all of your
-            flight travel arrangements. Whether you choose to book a flight directly on our website or over the phone,
-            TicketAirlineBooking.com will help you save money on your next flight reservation.
+            changes and cancellations at a discount. Our 24/7 flight reservation desk is here to assist you
+            with all of your flight travel arrangements. Whether you choose to book a flight directly on our
+            website or over the phone, TicketAirlineBooking.com will help you save money on your next flight reservation.
         </p>
-        <p class="font-weight-bold">To make a new flight reservation, changes or cancellations please call:
-            <a class="number-replace parah-link">1 (844) 968-2124</a></p>
         <div class="row text-center">
             <div class="col-md-4">
                 <!-- Card -->
@@ -93,11 +90,35 @@
 
                         <!-- Title -->
                         <h4 class="card-title">
-                            <a class="link-replace">BOOK A FLIGHT</a>
+                            <a class="link-replace text-uppercase">Easy-Booking</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">Search for a flight round-trip, multi-city or more. Find a flight that fits
-                            your schedule.</p>
+                        <p class="card-text">Get your e-ticket in less than <b>1 min</b>. Our sales experts have tickets
+                            ready for booking. By reaching out to us, you are guaranteed the fastest service possible.
+                        </p>
+                    </div>
+
+                </div>
+                <!-- Card -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card -->
+                <div class="card">
+
+                    <!-- Card image -->
+                    <div class="card-image-custom">
+                        <img src="img/ticketairlinebooking/check-circle.png" alt="Card image cap">
+                    </div>
+                    <!-- Card content -->
+                    <div class="card-body">
+
+                        <!-- Title -->
+                        <h4 class="card-title">
+                            <a class="link-replace text-uppercase">Best Prices</a>
+                        </h4>
+                        <!-- Text -->
+                        <p class="card-text">Save money by working with one of our deal experts. Low-cost Flights, Plane
+                            Tickets, Specials, and the Lowest Prices are our specialty.</p>
 
                     </div>
 
@@ -117,35 +138,11 @@
 
                         <!-- Title -->
                         <h4 class="card-title">
-                            <a class="link-replace">FLIGHT CANCELLATIONS</a>
+                            <a class="link-replace text-uppercase">Quick Services</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">Change or cancel a flight, rebook a delayed or cancelled flight, make
-                            same-day travel changes.</p>
-
-                    </div>
-
-                </div>
-                <!-- Card -->
-            </div>
-            <div class="col-md-4">
-                <!-- Card -->
-                <div class="card">
-
-                    <!-- Card image -->
-                    <div class="card-image-custom">
-                        <img src="img/ticketairlinebooking/check-circle.png" alt="Card image cap">
-                    </div>
-                    <!-- Card content -->
-                    <div class="card-body">
-
-                        <!-- Title -->
-                        <h4 class="card-title">
-                            <a class="link-replace">REFUNDS & CHANGES</a>
-                        </h4>
-                        <!-- Text -->
-                        <p class="card-text">Apply for a refund for tickets, unused trip purchases, unused Trip
-                            Protection, or check refund status.</p>
+                        <p class="card-text">With our assistance, passengers may save money on their flight
+                            reservations, make changes, or even cancel their trips altogether.</p>
 
                     </div>
 
@@ -173,18 +170,16 @@
 </main>
 <footer id="footer" class="page-footer unique-color-dark pt-2">
     <div class="container text-center">
-        <p> © 2020 Ticket Airline Booking - <span class="address-fill"></span></p>
+        <p> © 2021 Ticket Airline Booking - <span class="address-fill"></span></p>
         <p>
-            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service
-            that has
-            been published on its website. Note that any such description or information, which includes but is not
-            limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover,
-            TicketAirlineBooking.com
-            reserves the right to edit, modify or change any piece of information at any given time. In case a customer
-            has made reservation from this website under the published price that is wrong, then customer will be given
-            a chance to either continue the same reservation under the correct price or to cancel the reservation
-            without any termination fee.
+            TicketAirlineBooking.com makes no assurance as to the correctness of any of the information, products,
+            or services found on its website. TicketAirlineBooking.com is not liable for any inaccuracies or errors in
+            any description or information, which includes but is not limited to price and other information.
+        </p>
+        <p>
+            At TicketAirlineBooking.com's discretion, any item of information may be edited or modified. This website
+            will give customers the option to either continue with their current reservation at the current rate
+            or cancel their reservation with no cancellation fees if a published pricing is incorrect.
         </p>
         <p>
             <a href="privacy.html">Privacy Policy</a> - <a href="terms.html">Terms and Conditions</a>
