--- a/html/ticketairlinebooking/privacy.html
+++ b/html/ticketairlinebooking/privacy.html
@@ -62,9 +62,8 @@
     <div class="container pt-3" id="privacyContainer">
         <div>
             <h1>Privacy Policy</h1>
-            <span>by Rono / November 9, 2020</span>
-            <p>
-                Last updated: November 9, 2020</p>
+            <span>by Rono / November 5, 2021</span>
+            <p>Last updated: November 5, 2021</p>
 
             <p> (“us”, “we”, or “our”) operates the website (the “Service”).</p>
 
@@ -154,16 +153,16 @@
 </main>
 <footer id="footer" class="page-footer unique-color-dark pt-2">
     <div class="container text-center">
-        <p> © 2020 Ticket Airline Booking - <span class="address-fill"></span></p>
+        <p> © 2021 Ticket Airline Booking - <span class="address-fill"></span></p>
         <p>
-            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service that has
-            been published on its website. Note that any such description or information, which includes but is not
-            limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover, TicketAirlineBooking.com
-            reserves the right to edit, modify or change any piece of information at any given time. In case a customer
-            has made reservation from this website under the published price that is wrong, then customer will be given
-            a chance to either continue the same reservation under the correct price or to cancel the reservation
-            without any termination fee.
+            TicketAirlineBooking.com makes no assurance as to the correctness of any of the information, products,
+            or services found on its website. TicketAirlineBooking.com is not liable for any inaccuracies or errors in
+            any description or information, which includes but is not limited to price and other information.
+        </p>
+        <p>
+            At TicketAirlineBooking.com's discretion, any item of information may be edited or modified. This website
+            will give customers the option to either continue with their current reservation at the current rate
+            or cancel their reservation with no cancellation fees if a published pricing is incorrect.
         </p>
         <p>
             <a href="privacy.html">Privacy Policy</a> - <a href="terms.html">Terms and Conditions</a>
