scss changes and CDN changes

--- a/html/reservationairticket/index.html
+++ b/html/reservationairticket/index.html
@@ -8,22 +8,22 @@
     <title>24/7 Airlines Reservations – Book a New Flight, Make a Change or Cancellation</title>
 
     <!--fav icon-->
-    <link rel="icon" href="img/reservation/ico/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/reservation/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/reservation/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/reservation/ico/favicon-16x16.png">
+    <link rel="icon" href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-16x16.png">
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://us-1ae7e.kxcdn.com/css/bootstrap.min.css" rel="stylesheet">
 
     <!--Font Awesome 5-->
-    <link href="css/modules/fontawesome.min.css" rel="stylesheet">
-    <link href="css/modules/brands.min.css" rel="stylesheet">
-    <link href="css/modules/regular.min.css" rel="stylesheet">
-    <link href="css/modules/solid.min.css" rel="stylesheet">
+    <link href="https://us-1ae7e.kxcdn.com/css/modules/fontawesome.min.css" rel="stylesheet">
+<!--    <link href="https://us-1ae7e.kxcdn.com/css/modules/brands.min.css" rel="stylesheet">-->
+<!--    <link href="https://us-1ae7e.kxcdn.com/css/modules/regular.min.css" rel="stylesheet">-->
+    <link href="https://us-1ae7e.kxcdn.com/css/modules/solid.min.css" rel="stylesheet">
 
     <!-- Material Design Bootstrap and Custom included -->
-    <link href="css/reservationPhNum.min.css" rel="stylesheet">
+    <link href="https://us-1ae7e.kxcdn.com/css/reservationPhNum.min.css" rel="stylesheet">
 
     <!-- Number Pool swap-->
     <script src=//b-js.ringba.com/CA61b9c4a0a224426eaef1b970467fd809 async></script>
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-orange-secondary secondary-color">
         <div class="container" id="navContainer">
             <a class="navbar-brand" href="#">
-                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid"
+                <img src="https://us-1ae7e.kxcdn.com/img/reservation/reservationairticket-logo.png" class="img-fluid"
                      alt="Reservation Air Ticket">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -99,7 +99,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/reservation/check-circle.png" alt="Card image cap">
+                        <img src="https://us-1ae7e.kxcdn.com/img/reservation/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -123,7 +123,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/reservation/check-circle.png" alt="Card image cap">
+                        <img src="https://us-1ae7e.kxcdn.com/img/reservation/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -147,7 +147,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/reservation/check-circle.png" alt="Card image cap">
+                        <img src="https://us-1ae7e.kxcdn.com/img/reservation/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -210,17 +210,17 @@
 
 <!-- SCRIPTS -->
 <!-- JQuery -->
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/jquery-3.3.1.min.js"></script>
 <!-- Bootstrap tooltips -->
-<script type="text/javascript" src="js/popper.min.js"></script>
+<script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/popper.min.js"></script>
 <!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/bootstrap.min.js"></script>
 <!-- MDB core JavaScript -->
-<script type="text/javascript" src="js/mdb.min.js"></script>
+<script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/mdb.min.js"></script>
 <script>
     const numberString = "+16072608096";
     const formattedNumber = "1(607)-260-8096";
 </script>
-<script type="text/javascript" src="js/basic.min.js"></script>
+<script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/basic.min.js"></script>
 </body>
 </html>
