--- a/html/reservationairticket/contact-us.html
+++ b/html/reservationairticket/contact-us.html
@@ -9,18 +9,20 @@
 
     <!--fav icon-->
     <link rel="icon" href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32"
+          href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96"
+          href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16"
+          href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-16x16.png">
 
     <!-- Bootstrap core CSS -->
-    <link href="https://us-1ae7e.kxcdn.com/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+          crossorigin="anonymous">
 
-    <!--Font Awesome 5-->
-    <link href="https://us-1ae7e.kxcdn.com/css/modules/fontawesome.min.css" rel="stylesheet">
-    <!--    <link href="https://us-1ae7e.kxcdn.com/css/modules/brands.min.css" rel="stylesheet">-->
-    <!--    <link href="https://us-1ae7e.kxcdn.com/css/modules/regular.min.css" rel="stylesheet">-->
-    <link href="https://us-1ae7e.kxcdn.com/css/modules/solid.min.css" rel="stylesheet">
+    <!--Font Awesome 5.8.1-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" rel="stylesheet">
 
     <!-- Material Design Bootstrap and Custom included -->
     <link href="https://us-1ae7e.kxcdn.com/css/reservationPhNum.min.css" rel="stylesheet">
@@ -190,12 +192,14 @@
 </footer>
 
 <!-- SCRIPTS -->
-<!-- JQuery -->
-<script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/jquery-3.3.1.min.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/bootstrap.min.js"></script>
+<!--JQuery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!--Popper+Bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/mdb.min.js"></script>
 <script>
