changes for 404  page and modal number class for link replace

--- a/html/farestravelhub/contact-us.html
+++ b/html/farestravelhub/contact-us.html
@@ -242,7 +242,7 @@
 
             <!--Footer-->
             <div class="modal-footer justify-content-center">
-                <a class="btn btn-danger btn-danger-hover" href="tel:18008008734">
+                <a class="btn btn-danger btn-danger-hover link-replace" href="tel:18008008734">
                     <i class="fas fa-phone fa-rotate-90"></i>
                     <span>Call Us</span>
                 </a>
